--- a/ui/index.html
+++ b/ui/index.html
@@ -5,8 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>barecms</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Space+Grotesk:wght@400;500;600;700&family=IBM+Plex+Mono:wght@400;500&display=swap" rel="stylesheet">
   </head>
-  <body data-theme="lofi">
+  <body data-theme="barecms">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
